Audio competing fails on certain situation
Categories
(Core :: Audio/Video: Playback, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | --- | unaffected |
| firefox70 | --- | unaffected |
| firefox71 | --- | fixed |
| firefox72 | --- | fixed |
People
(Reporter: alwu, Assigned: alwu)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
Bug 1578615 introduced a regression, which causes audio competing failed on centain situation.
STR.
- turn the pref
media.audioFocus.managementon - play any music from tab1
- play any other music from tab2
- tab1 should be stopped when started tab2
- start music from tab1 again
Expected.
6. tab2 should be stopped
Actual.
6. tab2 is still playing, two tab are playing together
--
In bug 1578615, we have separated delaying media playback logic from the normal audio channel usage in HTMLMediaElement, so in theory other audio channel agent owners won't need to handle with such a complex detail hiding in the delay autoplay. However, AudibleState is something we created for delaying autoplay, because we introduced a new value eMaybeAudible, which would only be used in delaying autoplay.
In this context, AudibleState is also something we should eliminate from other usage. Therefore, we should use boolean to replace it and then create a new method to handle delaying autoplay sepecific logic.
If we do so, when other audio channel agent owners are calling methods such as notifyStartedPlaying() and notifyStartedAudible(), they can simply sent a boolean, and don't need to figure out what AudibleState is.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 1•6 years ago
|
||
(In reply to Alastor Wu [:alwu] from comment #0)
In bug 1578615, we have separated delaying media playback logic from the normal audio channel usage in HTMLMediaElement, so in theory other audio channel agent owners won't need to handle with such a complex detail hiding in the delay autoplay. However,
AudibleStateis something we created for delaying autoplay, because we introduced a new valueeMaybeAudible, which would only be used in delaying autoplay.In this context,
AudibleStateis also something we should eliminate from other usage. Therefore, we should use boolean to replace it and then create a new method to handle delaying autoplay sepecific logic.If we do so, when other audio channel agent owners are calling methods such as
notifyStartedPlaying()andnotifyStartedAudible(), they can simply sent a boolean, and don't need to figure out whatAudibleStateis.
Ah, I forgot that we have already had bug1583978 to remove eMaybeAudible. So I would only solve the audio competing issue in this bug and leave remaining work in bug1583978.
| Assignee | ||
Comment 2•6 years ago
|
||
Add a test case to ensure that audio competiting could work multiple times when we play media again and again from different tabs.
| Assignee | ||
Comment 3•6 years ago
|
||
Everytime when we start a controller, we should also update its audible state correctly, in order to request audio focus correctly.
Updated•6 years ago
|
Comment 5•6 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/e8517c1bc0d7
https://hg.mozilla.org/mozilla-central/rev/e41130821190
Comment 6•6 years ago
|
||
Is this something we should consider uplifting to Beta or can this ride Fx72 to release?
| Assignee | ||
Comment 7•6 years ago
|
||
Comment on attachment 9103422 [details]
Bug 1590579 - part2 : update controller's audible state when it starts.
Beta/Release Uplift Approval Request
- User impact if declined: The audio competing would fail on certain situation, then user would hear multiple sound playing and mixing together, it's kind of a mess. Although the audio focus management is of by default on desktop, but it's on by default on mobile.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce: Follow the instruction in comment0.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This feature is default off on desktop and we have also added an automation test for it.
- String changes made/needed: no
| Assignee | ||
Updated•6 years ago
|
Comment 8•6 years ago
|
||
Comment on attachment 9103422 [details]
Bug 1590579 - part2 : update controller's audible state when it starts.
Fix for a 71 audio regression, low risk patch with tests, does not affect desktop but likely to impact our mobile apps, uplift approved for 71 beta 6, thanks.
Updated•6 years ago
|
Comment 9•6 years ago
|
||
| bugherder uplift | ||
Updated•3 years ago
|
Description
•