Bug 1590579 - part2 : update controller's audible state when it starts. r=chunmin

Everytime when we start a controller, we should also update its audible state correctly, in order to request audio focus correctly.

Differential Revision: https://phabricator.services.mozilla.com/D50151